[ARIES-1682] Use the URL Api when resolving relative URIs